[project]
name = "uv-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "notebook>=7.5.5",
    "openai>=2.32.0",
    "ipykernel>=6.29.0",
    "python-dotenv>=1.2.2",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.16",
    "langchain-deepseek>=1.0.1",
    "rich>=15.0.0",
    "langchain-community>=0.4.1",
    "dashscope>=1.25.17",
    "langchain-core>=1.3.0",
    "ipywidgets>=8.1.8",
    "langchain-tavily>=0.2.18",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
